# axonweave-daemon

./: .gitignore  Cargo.toml  README.md  _build.rs
examples/: direct_echo_client.rs  echo_server.rs  proxy_test_client.rs
proto/: axon_control.proto  echo.proto
src/: lib.rs  main.rs
src/grpc_generated/: axon_control_v1.rs  echo_v1.rs  mod.rs
