[package]
name = "axonweave-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "=0.11.0"
prost = "0.12.6"
http = "=0.2.12"
bytes = "1" # `prost` использует `bytes`, добавим его явно
tower = { version = "0.4", features = ["full"] }

[build-dependencies]
tonic-build = "=0.11.0"